Round I of ceda

--- a/code/cleaning_and_eda_i.ipynb
+++ b/code/cleaning_and_eda_i.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f1a1911c",
+   "id": "35c3af72",
    "metadata": {},
    "source": [
     "As usual, we'll start with cleaning as I won't ever assume data is 'good to go' just because somebody handed it to me.\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "810c71b9",
+   "id": "ff47ae39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "942a20bb",
+   "id": "0bdabce4",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4149409c",
+   "id": "0632c01b",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "af3e7c1a",
+   "id": "f742d0a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c957a154",
+   "id": "b39f6003",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "08db9021",
+   "id": "22bccaf0",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fb4cb853",
+   "id": "722e9816",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "95b5b4cd",
+   "id": "8d0643e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "446d31af",
+   "id": "dec5f453",
    "metadata": {},
    "source": [
     "Given that we only have on categorical vaiable, we'll just look at that plainly:"
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c9000f93",
+   "id": "00755f30",
    "metadata": {},
    "outputs": [
     {
@@ -435,17 +435,204 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5002c68d",
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "54bd93b7",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex               object\n",
+       "length           float64\n",
+       "diameter         float64\n",
+       "height           float64\n",
+       "whole_weight     float64\n",
+       "whole_weight1    float64\n",
+       "whole_weight2    float64\n",
+       "shell_weight     float64\n",
+       "rings              int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Likely visualization would be the way to go, but eh, I'm a numbers guy..."
+    "#Before we look at sex x other stuff, let's examine the other columns:\n",
+    "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "00c66305",
+   "execution_count": 38,
+   "id": "ebb1e8cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length\n",
+      "count    90615.000000\n",
+      "mean         0.517098\n",
+      "std          0.118217\n",
+      "min          0.075000\n",
+      "25%          0.445000\n",
+      "50%          0.545000\n",
+      "75%          0.600000\n",
+      "max          0.815000\n",
+      "Name: length, dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "diameter\n",
+      "count    90615.000000\n",
+      "mean         0.401679\n",
+      "std          0.098026\n",
+      "min          0.055000\n",
+      "25%          0.345000\n",
+      "50%          0.425000\n",
+      "75%          0.470000\n",
+      "max          0.650000\n",
+      "Name: diameter, dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "height\n",
+      "count    90615.000000\n",
+      "mean         0.135464\n",
+      "std          0.038008\n",
+      "min          0.000000\n",
+      "25%          0.110000\n",
+      "50%          0.140000\n",
+      "75%          0.160000\n",
+      "max          1.130000\n",
+      "Name: height, dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df.columns[:4]:\n",
+    "    if df[i].dtypes != 'object':\n",
+    "        print(f\"{i}\")\n",
+    "        print(df[i].describe())\n",
+    "        print(f\"~\"*26)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dcab793",
+   "metadata": {},
+   "source": [
+    "Length is slightly skewed to the left.\n",
+    "\n",
+    "So too with diameter. Now, I did a quick Google search of these creatures I've never even heard of until this competition, and typical pictures show them to have an ovalish shape. So, I'm quite confused. I later looked on the original dataset to find that length is'longest shell measurement' while diameter is somehow 'perpendicular to length'. Regardless, we continue.\n",
+    "\n",
+    "On the topic of definitions: The three weights correspond to whole, shucked, and viscera weight. Rings correspond to 1.5 years of additional life.\n",
+    "\n",
+    "And, height is also skewed to left. Perhaps all the leftists are a trend we'll see more and more. Perhaps we should comment more on that, but for now:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b009a4b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "whole_weight\n",
+      "count    90615.000000\n",
+      "mean         0.789035\n",
+      "std          0.457671\n",
+      "min          0.002000\n",
+      "25%          0.419000\n",
+      "50%          0.799500\n",
+      "75%          1.067500\n",
+      "max          2.825500\n",
+      "Name: whole_weight, dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "whole_weight1\n",
+      "count    90615.000000\n",
+      "mean         0.340778\n",
+      "std          0.204428\n",
+      "min          0.001000\n",
+      "25%          0.177500\n",
+      "50%          0.330000\n",
+      "75%          0.463000\n",
+      "max          1.488000\n",
+      "Name: whole_weight1, dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "whole_weight2\n",
+      "count    90615.000000\n",
+      "mean         0.169422\n",
+      "std          0.100909\n",
+      "min          0.000500\n",
+      "25%          0.086500\n",
+      "50%          0.166000\n",
+      "75%          0.232500\n",
+      "max          0.760000\n",
+      "Name: whole_weight2, dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "shell_weight\n",
+      "count    90615.000000\n",
+      "mean         0.225898\n",
+      "std          0.130203\n",
+      "min          0.001500\n",
+      "25%          0.120000\n",
+      "50%          0.225000\n",
+      "75%          0.305000\n",
+      "max          1.005000\n",
+      "Name: shell_weight, dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "rings\n",
+      "count    90615.000000\n",
+      "mean         9.696794\n",
+      "std          3.176221\n",
+      "min          1.000000\n",
+      "25%          8.000000\n",
+      "50%          9.000000\n",
+      "75%         11.000000\n",
+      "max         29.000000\n",
+      "Name: rings, dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df.columns[4:]:\n",
+    "    if df[i].dtypes != 'object':\n",
+    "        print(f\"{i}\")\n",
+    "        print(df[i].describe())\n",
+    "        print(f\"~\"*26)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "919b0f83",
+   "metadata": {},
+   "source": [
+    "Hmm, now this is quite surprising, (Whole Weight) 0 is ever so slightly skewed to the left;the trend changes when we get into 1 and is still slightly retained at 2 (recall the much lower standard deviations. Pragmatically, I wouldn't be too surprised as I'd imagine that the most varity would occur with the shells, being as dense as they are.\n",
+    "\n",
+    "Shell weight appars approximately normal, not accounting for kurtosis\n",
+    "\n",
+    "And, finally, rings are to the right. Being an indication of ag, I am unsurprised even in this different environment to see 'those few old guys' prop up again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f2337bc",
+   "metadata": {},
+   "source": [
+    "Likely visualization would be the way to go, but eh, I'm a numbers guy... Especially when we'll be doing so many feature engineerings... maybe relevant for log transformations later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7d13fd24",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +659,45 @@
       "F    26495.0  0.157194  0.027658  0.05  0.140  0.155  0.175  1.13\n",
       "I    33093.0  0.103129  0.029335  0.00  0.085  0.100  0.125  0.23\n",
       "M    31027.0  0.151396  0.029591  0.00  0.135  0.150  0.170  1.13\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Now, let's see what changes when we divide them up by category.\n",
+    "\n",
+    "focus  = ['sex']\n",
+    "for i in focus:\n",
+    "    for c in df.columns[:4]:\n",
+    "        if c != i:\n",
+    "            print(f\"{i} on {c}\")\n",
+    "            print(df.groupby(i)[c].describe())\n",
+    "            print(f\"~\"*26)\n",
+    "#Hmm, I wonder if it might be useful to have by it the baseline of df[c].describe() as well. Oh well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72f47c0e",
+   "metadata": {},
+   "source": [
+    "I'll only bother to write things that significantly pop out.\n",
+    "\n",
+    "And, right off th bat we see Is ae much shorter inlength, diameter, and height than hte others.... Hmm, so yeah, that definitely seems like that will be a significant factor. Of special note on hat font are their heights: While their medians aren't toooooo different (well, 50%...), the max is approximately a sixth of the others... \n",
+    "\n",
+    "Also interesting to see in this species the larger diemsnions associated with females, likely associated with how they breed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e08e8fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "sex on whole_weight\n",
       "       count      mean       std     min     25%     50%     75%     max\n",
       "sex                                                                     \n",
@@ -514,12 +739,89 @@
    "source": [
     "focus  = ['sex']\n",
     "for i in focus:\n",
-    "    for c in df.columns:\n",
+    "    for c in df.columns[4:]:\n",
     "        if c != i:\n",
     "            print(f\"{i} on {c}\")\n",
     "            print(df.groupby(i)[c].describe())\n",
     "            print(f\"~\"*26)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d84e97a",
+   "metadata": {},
+   "source": [
+    "Unsuprisingly per the earlier columns the lsser weight associated with Is. However, their maxes are quite close. And, e the max of male W2 - likely an outlier given hterest of the data with females weighing more (likelya similar matter re. shell wieght's max male weight).\n",
+    "\n",
+    "And, the final piece of th data that I was inclined to assume: Notice the much youngr Is re. rings - per medians 3 rings ie 4.5 years younger! So, naturally given that it would make sense for everything to be lower... Ie I'm assuming a continued growth, at whatever rate (linear, logistic, etc.), as time ie rings go on. And, for whatever reason, that is not occuring with Is, hence their typically lower dimensions across the board.\n",
+    "\n",
+    "A final piece of curiousity is the disproportionate amount of the classes: While we certainly have quite a large amount of females, they're approximately 5% less than the next largest group of males...Is this an indication that naturally occuring in nature there aren't enough females for all the males? Do Is take care of that? Given the disproportion, does this lead to one group(s) dying earlier or later? On that note, does it lad to one group(s) living differently to change its dimensions?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2a0bea71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex\n",
+       "I    0.365204\n",
+       "M    0.342405\n",
+       "F    0.292391\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sex'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d145af23",
+   "metadata": {},
+   "source": [
+    "I might use this notebook to prep some images later, but for now we'll call this here; eh, we hardly used it. Let's go ahead and use it to generate new featur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf84b1e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03b023e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33d27286",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d636aabd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
