First bit of modeling

--- a/code/cleaning_and_eda_i.ipynb
+++ b/code/cleaning_and_eda_i.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "35c3af72",
+   "id": "1ba7a442",
    "metadata": {},
    "source": [
     "As usual, we'll start with cleaning as I won't ever assume data is 'good to go' just because somebody handed it to me.\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ff47ae39",
+   "id": "9d32c6ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0bdabce4",
+   "id": "a198bd7f",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0632c01b",
+   "id": "c926f3cb",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f742d0a1",
+   "id": "b828f048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b39f6003",
+   "id": "f986aab0",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "22bccaf0",
+   "id": "d96a78ff",
    "metadata": {},
    "outputs": [
     {
@@ -369,14 +369,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "722e9816",
+   "id": "dce5c1b2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Phew no nulls.\n"
+      "Phew, no nulls.\n"
      ]
     }
    ],
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8d0643e2",
+   "id": "163818dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec5f453",
+   "id": "8ea9db38",
    "metadata": {},
    "source": [
     "Given that we only have on categorical vaiable, we'll just look at that plainly:"
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "00755f30",
+   "id": "9405dfd1",
    "metadata": {},
    "outputs": [
     {
@@ -436,8 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "54bd93b7",
+   "execution_count": 10,
+   "id": "fa1206dd",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,8 +467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "ebb1e8cb",
+   "execution_count": 11,
+   "id": "7b531fe4",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dcab793",
+   "id": "86d36a1a",
    "metadata": {},
    "source": [
     "Length is slightly skewed to the left.\n",
@@ -535,8 +535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "b009a4b8",
+   "execution_count": 12,
+   "id": "a5a077d4",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "919b0f83",
+   "id": "45dec50b",
    "metadata": {},
    "source": [
     "Hmm, now this is quite surprising, (Whole Weight) 0 is ever so slightly skewed to the left;the trend changes when we get into 1 and is still slightly retained at 2 (recall the much lower standard deviations. Pragmatically, I wouldn't be too surprised as I'd imagine that the most varity would occur with the shells, being as dense as they are.\n",
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f2337bc",
+   "id": "318293a6",
    "metadata": {},
    "source": [
     "Likely visualization would be the way to go, but eh, I'm a numbers guy... Especially when we'll be doing so many feature engineerings... maybe relevant for log transformations later."
@@ -631,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "7d13fd24",
+   "execution_count": 13,
+   "id": "499bfbbb",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f47c0e",
+   "id": "3a9e7304",
    "metadata": {},
    "source": [
     "I'll only bother to write things that significantly pop out.\n",
@@ -690,8 +690,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "e08e8fa8",
+   "execution_count": 14,
+   "id": "a1ad5c51",
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d84e97a",
+   "id": "2ebc1e59",
    "metadata": {},
    "source": [
     "Unsuprisingly per the earlier columns the lsser weight associated with Is. However, their maxes are quite close. And, e the max of male W2 - likely an outlier given hterest of the data with females weighing more (likelya similar matter re. shell wieght's max male weight).\n",
@@ -760,8 +760,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "2a0bea71",
+   "execution_count": 15,
+   "id": "ad43cc94",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,43 +785,147 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d145af23",
+   "id": "9ff8709d",
    "metadata": {},
    "source": [
-    "I might use this notebook to prep some images later, but for now we'll call this here; eh, we hardly used it. Let's go ahead and use it to generate new featur"
+    "One last prudent thing to do would be to see, given an age ie rings, the relative bros:\n",
+    "<br> Ie perhaps the mass discrepency is just because Is live shorter, but given we're focused on the same age:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf84b1e7",
+   "execution_count": 25,
+   "id": "5727ac1c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sex on length\n",
+      "      count      mean       std    min    25%   50%    75%    max\n",
+      "sex                                                              \n",
+      "F     127.0  0.401024  0.075858  0.235  0.355  0.39  0.440  0.630\n",
+      "I    4995.0  0.344606  0.056603  0.075  0.310  0.35  0.380  0.550\n",
+      "M     289.0  0.356093  0.068885  0.160  0.315  0.35  0.395  0.575\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "sex on diameter\n",
+      "      count      mean       std   min    25%    50%     75%    max\n",
+      "sex                                                               \n",
+      "F     127.0  0.304843  0.061444  0.13  0.265  0.295  0.3375  0.490\n",
+      "I    4995.0  0.257391  0.045341  0.10  0.225  0.260  0.2900  0.410\n",
+      "M     289.0  0.268443  0.056102  0.10  0.230  0.265  0.3000  0.475\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "sex on height\n",
+      "      count      mean       std    min    25%    50%    75%    max\n",
+      "sex                                                               \n",
+      "F     127.0  0.102441  0.024655  0.060  0.085  0.100  0.115  0.200\n",
+      "I    4995.0  0.084130  0.015347  0.015  0.075  0.085  0.095  0.140\n",
+      "M     289.0  0.088685  0.019302  0.030  0.075  0.085  0.100  0.155\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Perhaps I should just make a loop, but eh...\n",
+    "age_focus = df[df['rings']==6] #I ended up just changing this one a number of times.\n",
+    "\n",
+    "focus  = ['sex']\n",
+    "for i in focus:\n",
+    "    for c in age_focus.columns[:4]:\n",
+    "        if c != i:\n",
+    "            print(f\"{i} on {c}\")\n",
+    "            print(age_focus.groupby(i)[c].describe())\n",
+    "            print(f\"~\"*26)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "03b023e0",
+   "execution_count": 26,
+   "id": "cb83fd67",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sex on whole_weight\n",
+      "      count      mean       std     min     25%     50%     75%     max\n",
+      "sex                                                                    \n",
+      "F     127.0  0.342756  0.216984  0.0740  0.2030  0.2805  0.4085  1.3615\n",
+      "I    4995.0  0.205839  0.094444  0.0080  0.1365  0.1895  0.2625  0.7305\n",
+      "M     289.0  0.236984  0.138651  0.0145  0.1475  0.2015  0.2925  0.9800\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "sex on whole_weight1\n",
+      "      count      mean       std    min     25%    50%    75%     max\n",
+      "sex                                                                 \n",
+      "F     127.0  0.149138  0.102306  0.026  0.0875  0.120  0.169  0.6275\n",
+      "I    4995.0  0.089586  0.047083  0.003  0.0565  0.081  0.115  0.4950\n",
+      "M     289.0  0.102939  0.066466  0.005  0.0590  0.083  0.126  0.4865\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "sex on whole_weight2\n",
+      "      count      mean       std     min     25%     50%      75%     max\n",
+      "sex                                                                     \n",
+      "F     127.0  0.074179  0.049851  0.0125  0.0475  0.0610  0.09425  0.3615\n",
+      "I    4995.0  0.043380  0.020316  0.0005  0.0285  0.0400  0.05700  0.1565\n",
+      "M     289.0  0.050746  0.030687  0.0045  0.0305  0.0415  0.06250  0.1960\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "sex on shell_weight\n",
+      "      count      mean       std    min    25%     50%      75%     max\n",
+      "sex                                                                   \n",
+      "F     127.0  0.097496  0.057727  0.020  0.060  0.0800  0.11775  0.3700\n",
+      "I    4995.0  0.059624  0.026517  0.003  0.040  0.0575  0.07650  0.3505\n",
+      "M     289.0  0.067798  0.035874  0.008  0.042  0.0600  0.08500  0.2485\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "sex on rings\n",
+      "      count  mean  std  min  25%  50%  75%  max\n",
+      "sex                                            \n",
+      "F     127.0   6.0  0.0  6.0  6.0  6.0  6.0  6.0\n",
+      "I    4995.0   6.0  0.0  6.0  6.0  6.0  6.0  6.0\n",
+      "M     289.0   6.0  0.0  6.0  6.0  6.0  6.0  6.0\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "focus  = ['sex']\n",
+    "for i in focus:\n",
+    "    for c in age_focus.columns[4:]:\n",
+    "        if c != i:\n",
+    "            print(f\"{i} on {c}\")\n",
+    "            print(age_focus.groupby(i)[c].describe())\n",
+    "            print(f\"~\"*26)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "953d7de0",
+   "metadata": {},
+   "source": [
+    "Hmm... interesting - despite focusing on age the trend persisted of Is being much smaller across the board.\n",
+    "\n",
+    "On the topic, I wonder if I should end up making three models - one for each gender as likely the larger gender's younglings might be mistaken for oldies of the others... If I do decide to do that, pragmatically I would do so after alradying deciding on which general model to use, then seperating them into three... I won't bother to tune all 3 for each thing I try individually..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0828bd46",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering\n",
+    "\n",
+    "I might use this notebook to prep some images later, but for now we'll call this here; eh, we hardly used it. Let's go ahead and use it to generate new features, starting with squared and interactions then we'll move onto logs; nah, I took a break and was thinking about things and inclined to do things methodically.Ie starting with thebasics before any engineering. Henc, easiest to do things sequentially."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "33d27286",
+   "execution_count": 16,
+   "id": "0ea9cd16",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d636aabd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# df.to_csv('../data/cleaned_train.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
